# app/Http/Controllers/Api/ApplicationsController.php
@@ -1811,6 +1811,118 @@ class ApplicationsController extends Controller
         ]);
     }
 
+    #[OA\Get(
+        summary: 'Get application logs for a PR.',
+        description: 'Get application logs for a PR by UUID.',
+        path: '/applications/{uuid}/prs/{pr}/logs',
+        operationId: 'get-application-logs-for-pr-by-uuid',
+        security: [
+            ['bearerAuth' => []],
+        ],
+        tags: ['Applications'],
+        parameters: [
+            new OA\Parameter(
+                name: 'uuid',
+                in: 'path',
+                description: 'UUID of the application.',
+                required: true,
+                schema: new OA\Schema(
+                    type: 'string',
+                    format: 'uuid',
+                )
+            ),
+            new OA\Parameter(
+                name: 'pr',
+                in: 'path',
+                description: 'ID of the PR.',
+                required: true,
+                schema: new OA\Schema(
+                    type: 'string',
+                    format: 'int32',
+                )
+            ),
+            new OA\Parameter(
+                name: 'lines',
+                in: 'query',
+                description: 'Number of lines to show from the end of the logs.',
+                required: false,
+                schema: new OA\Schema(
+                    type: 'integer',
+                    format: 'int32',
+                    default: 100,
+                )
+            ),
+        ],
+        responses: [
+            new OA\Response(
+                response: 200,
+                description: 'Get application logs by UUID.',
+                content: [
+                    new OA\MediaType(
+                        mediaType: 'application/json',
+                        schema: new OA\Schema(
+                            type: 'object',
+                            properties: [
+                                'logs' => ['type' => 'string'],
+                            ]
+                        )
+                    ),
+                ]
+            ),
+            new OA\Response(
+                response: 401,
+                ref: '#/components/responses/401',
+            ),
+            new OA\Response(
+                response: 400,
+                ref: '#/components/responses/400',
+            ),
+            new OA\Response(
+                response: 404,
+                ref: '#/components/responses/404',
+            ),
+        ]
+    )]
+    public function pr_logs_by_uuid(Request $request)
+    {
+        $teamId = getTeamIdFromToken();
+        if (is_null($teamId)) {
+            return invalidTokenResponse();
+        }
+        $uuid = $request->route('uuid');
+        if (! $uuid) {
+            return response()->json(['message' => 'UUID is required.'], 400);
+        }
+        $application = Application::ownedByCurrentTeamAPI($teamId)->where('uuid', $request->uuid)->first();
+        if (! $application) {
+            return response()->json(['message' => 'Application not found.'], 404);
+        }
+
+        $containers = getCurrentApplicationContainerStatus($application->destination->server, $application->id, $request->route('pr'));
+
+        if ($containers->count() == 0) {
+            return response()->json([
+                'message' => 'Application is not running.',
+            ], 400);
+        }
+
+        $container = $containers->first();
+
+        $status = getContainerStatus($application->destination->server, $container['Names']);
+        if ($status !== 'running') {
+            return response()->json([
+                'message' => 'Application is not running.',
+            ], 400);
+        }
+
+        $lines = $request->query->get('lines', 100) ?: 100;
+        $logs = getContainerLogs($application->destination->server, $container['ID'], $lines);
+
+        return response()->json([
+            'logs' => $logs,
+        ]);
+    }
+
     #[OA\Delete(
         summary: 'Delete',
         description: 'Delete application by UUID.',
@@ -3071,6 +3183,14 @@ class ApplicationsController extends Controller
                     default: false,
                 )
             ),
+            new OA\Parameter(
+                name: 'pull_request_id',
+                in: 'query',
+                description: 'Pull request ID to deploy.',
+                schema: new OA\Schema(
+                    type: 'int32',
+                )
+            ),
         ],
         responses: [
             new OA\Response(
@@ -3127,6 +3247,7 @@ class ApplicationsController extends Controller
         $result = queue_application_deployment(
             application: $application,
             deployment_uuid: $deployment_uuid,
+            pull_request_id: $request->query->get('pull_request_id'),
             force_rebuild: $force,
             is_api: true,
             no_questions_asked: $instant_deploy
@@ -3167,6 +3288,14 @@ class ApplicationsController extends Controller
                 schema: new OA\Schema(
                     type: 'string',
                     format: 'uuid',
+                ),
+            ),
+            new OA\Parameter(
+                name: 'pull_request_id',
+                in: 'query',
+                description: 'Pull request ID to deploy.',
+                schema: new OA\Schema(
+                    type: 'int32',
                 )
             ),
         ],
